# brs_bot

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci_cd.yml
migrations/: 20240204005259_init.sql  20240204011940_username_drop_constraint.sql  20240301221509_substring_answer_chance.sql  20240302151126_substring_answer_change_migrate_data.sql  20240303001946_answer_entity_to_chat.sql  20240303194319_move_answer_pack_chat_id_data_from_ref_tables.sql  20240314072650_new_content_types.sql
src/: common.rs  config.rs  main.rs  server.rs  services.rs  telegram.rs  tests.rs  util.rs
src/common/: answer_entity_service.rs  callback_service.rs  command_parser.rs  command_service.rs  db.rs  error.rs  http.rs  lexer.rs  message_handler.rs  message_service.rs  request.rs  response.rs  telegram_client.rs  user_service.rs
src/core/: command.rs  lexer.rs
src/services/: commands.rs  lexer.rs  text_helper.rs
src/telegram/: db.rs  handler.rs  request.rs  user_service.rs
src/tests/: fixtures.rs  helpers.rs  test_command_call.rs  test_command_parser.rs  test_server.rs  test_user_service.rs
src/tests/resources/: edited_animation_with_caption.json  edited_text.json  photo.json  photo_in_reply.json
src/tests/sqlx_fixtures/: default_chat.sql  default_user.sql  text_substring.sql  text_trigger.sql
src/util/: command_parser.rs  lexer.rs
tests/resources/: animation.json  photo.json  photo_with_caption.json  pressed_button.json  text.json
