[package]
name = "brs_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.3"
enum-iterator = "1.4.1"
once_cell = "1.18.0"
regex = "1.10.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
strum = "0.25"
strum_macros = "0.25"
unicase = "2.7.0"
tokio = { version = "1.35.0", features = ["rt-multi-thread"] }
tracing-subscriber = "0.3.18"
